# hotcrowdcms

./: .dockerignore  .env.example  .gitignore  DJANGO_TEMPLATE_GUIDELINES.md  Dockerfile  PROJECT_GUIDELINES.md  README.md  build.sh  debug_layouts.py  fix_templates.py  pyproject.toml  start.sh  validate_templates.py
api/: api.py  api_auth.py  tests.py
cms/: context_processors.py  tests.py  urls.py  views.py
cms/templates/: base.html  media_library.html  setup_screen.html
config/: settings.py  urls.py
core/: models.py  tests.py
core/migrations/: 0001_initial.py  0002_playlist_end_date_playlist_end_time_playlist_is_loop_and_more.py  0003_mediaasset_name.py  0004_store_default_image_duration_store_default_volume_and_more.py  0005_store_cms_models.py  0006_screen_location.py  0007_store_auto_lock_store_dark_mode_store_description_and_more.py  0008_supportticket.py  0009_add_screen_api_token.py  0010_notification.py  0011_delete_notification.py  0012_playlistitem_store_content_alter_playlistitem_media.py  0013_remove_storecontent_scheduled_at_and_more.py  0014_playlistitem_content_constraint.py
services/: instagram.py
static/js/: playlist_editor.js  store_cms.js  store_editor.js
templates/: 404.html  500.html  assign_playlist.html  base.html  configuration.html  configuration.html.bak  dashboard.html  media_library.html  notifications.html  playlist_builder.html  playlists.html  screens.html  setup_screen.html  store_cms.html  store_cms_editor.html  store_cms_layout.html  store_cms_preview.html  support.html
templates/account/: login.html  password_reset.html  (+4 more)
(+22 files in other folders)
