[project]
name = "hotcrowdcms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=6.0",
    "django-allauth>=65.13.1",
    "django-browser-reload>=1.21.0",
    "django-cotton>=2.6.0",
    "django-htmx>=1.27.0",
    "django-ninja>=1.5.1",
    "django-tailwind>=4.4.2",
    "gunicorn>=23.0.0",
    "instagrapi>=2.2.1",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "whitenoise>=6.11.0",
    "django-storages[boto3]>=1.14.2",
]
